--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!--Barra de navegacion-->
     <nav class="navbar">
 
-      <img src="img/logo.jpg" class="navbar__logo" alt="">
+      <img loading="lazy" src="img/logo.jpg" class="navbar__logo" alt="">
 
       <ul class="navbar__item">
         <li class="navbar__link navbar__link--activo">inicio</li>
@@ -147,7 +147,7 @@
 
       <div class="nosotros__textoUno">
 
-        <h1 class="nosotros__titulo--uno">MISION</h1>
+        <h2 class="nosotros__titulo--uno">Mision</h2>
         <h4 class="nosotros__tituloSub--uno">Tristán Suárez</h4>
         <p class="nosotros__parrafo--uno">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
@@ -163,16 +163,16 @@
       </div>
 
       <div class="nosotros__imagenUno">
-        <img src="img/priscilla-du-preez-9CMUPez8wLo-unsplash.jpg" alt="">
+        <img loading="lazy" src="img/priscilla-du-preez-9CMUPez8wLo-unsplash.jpg" alt="">
       </div>
 
       <div class="nosotros__imagenDos">
-        <img src="img/sincerely-media-dGxOgeXAXm8-unsplash.jpg" alt="">
+        <img loading="lazy" src="img/sincerely-media-dGxOgeXAXm8-unsplash.jpg" alt="">
       </div>
 
       <div class="nosotros__textoDos">
 
-        <h1 class="nosotros__titulo--dos">VISION</h1>
+        <h2 class="nosotros__titulo--dos">Vision</h2>
         <h4 class="nosotros__tituloSub--dos">Tristán Suárez</h4>
         <p class="nosotros__parrafo--dos">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
@@ -200,7 +200,7 @@
     <section class="mision">
       <div class="mision__texto">
         <h3 class="mision__tituloPre">Somos Iglesia!</h3>
-        <h1 class="mision__titulo">Nosotros</h1>
+        <h2 class="mision__titulo">Nosotros</h2>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
         <p class="mision__parrafo">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
@@ -239,11 +239,11 @@
 
 
       <div class="aside__iframe">
-        <iframe src="https://www.youtube.com/embed/s2sFTTzpoQg" title="YouTube video player" frameborder="0"
+        <iframe loading="lazy" src="https://www.youtube.com/embed/s2sFTTzpoQg" title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
 
-        <iframe src="https://www.youtube.com/embed/H-dO9ptoajY" title="YouTube video player" frameborder="0"
+        <iframe loading="lazy" src="https://www.youtube.com/embed/H-dO9ptoajY" title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
@@ -258,7 +258,7 @@
 
       <div class="iglesia__texto">
         <h3 class="iglesia__tituloPre">Somos Iglesia!</h3>
-        <h1 class="iglesia__titulo">ACTIVIDADES</h1>
+        <h2 class="iglesia__titulo">Actividades</h2>
         <h4 class="iglesia__tituloSub">Tristán Suárez</h4>
       </div>
 
@@ -271,7 +271,7 @@
           <div class="iglesia__imagen iglesia__imagen--niños">
           </div>
           <div class="iglesia__cardTexto">
-            <h1 class="iglesia__cardTitulo">Niños</h1>
+            <h2 class="iglesia__cardTitulo">Niños</h2>
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
@@ -285,7 +285,7 @@
           <div class="iglesia__imagen iglesia__imagen--preAdolescentes">
           </div>
           <div class="iglesia__cardTexto">
-            <h1 class="iglesia__cardTitulo">Preadolescentes</h1>
+            <h2 class="iglesia__cardTitulo">Preadolescentes</h2>
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
@@ -298,7 +298,7 @@
           <div class="iglesia__imagen iglesia__imagen--jovenes">
           </div>
           <div class="iglesia__cardTexto">
-            <h1 class="iglesia__cardTitulo">Jovenes</h1>
+            <h2 class="iglesia__cardTitulo">Jovenes</h2>
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
@@ -315,7 +315,7 @@
           <div class="iglesia__imagen iglesia__imagen--matrimonios">
           </div>
           <div class="iglesia__cardTexto">
-            <h1 class="iglesia__cardTitulo">Matrimonios</h1>
+            <h2 class="iglesia__cardTitulo">Matrimonios</h2>
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
@@ -333,7 +333,7 @@
       <div class="popup__card">
         <div class="popup__img"></div>
         <div class="popup__text">
-          <h1>Ministerio Jovenes</h1>
+          <h2>Ministerio Jovenes</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni ratione quidem sequi dolores, mollitia sed
             nihil vitae atque blanditiis dolore vero voluptatum placeat tempore aliquam veniam vel deleniti praesentium
             quia maiores reiciendis. Culpa maxime minus, tempore architecto, autem eligendi quia accusamus ipsa,
@@ -398,9 +398,9 @@
           <ul>
             <li class="footer__reuniones">
               <i class="fas fa-cross"></i>
-              <p class="footer__parrafo"><strong>CULTOS CENTRALES:</strong>
+              <p class="footer__parrafo"><strong>Cultos centrales:</strong>
                 Miercoles 19:00hs y Domingos 10:30hs
-                <strong>CONSULTORIO PASTORAL:</strong>
+                <strong>Consultorio Pastoral:</strong>
                 Martes 17hs a 20hs.
                 Miercoles 17hs a 19hs</p>
             </li>
@@ -430,12 +430,11 @@
       </div>
 
       <div class="footer__grupo2">
-        <small>&copy; <strong>2022 sebygalla</strong> /Todos los derechos reservados </small>
+        <small>&copy; <strong>2022 sebygalla</strong> -Todos los derechos reservados </small>
       </div>
 
     </footer>
   </div>
-
 
 
   <!-- fontawesome -->
