--- a/index.html
+++ b/index.html
@@ -32,8 +32,20 @@
 
 <body>
 
+  <!--Preloader-->
+  <div class="loader__contenedor">
+    <div class="loader__imagen">
+      <img src="img/Logo1.jpg" alt="">
+    </div>
+    <div class="loader__texto">
+      <span>EL ENCUENTRO - Tristán Suárez</span>
+    </div>
+  </div>
+
   <!--contenedor general-->
   <div class="contenedor">
+
+
 
     <!--header-->
     <header class="header">
@@ -218,7 +230,7 @@
           voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
           consequatur.
 
-      
+
 
         </p>
       </div>
@@ -239,11 +251,13 @@
 
 
       <div class="aside__iframe">
-        <iframe loading="lazy" src="https://www.youtube.com/embed/s2sFTTzpoQg" title="YouTube video player" frameborder="0"
+        <iframe loading="lazy" src="https://www.youtube.com/embed/s2sFTTzpoQg" title="YouTube video player"
+          frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
 
-        <iframe loading="lazy" src="https://www.youtube.com/embed/H-dO9ptoajY" title="YouTube video player" frameborder="0"
+        <iframe loading="lazy" src="https://www.youtube.com/embed/H-dO9ptoajY" title="YouTube video player"
+          frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
