--- a/index.html
+++ b/index.html
@@ -45,24 +45,25 @@
   <!--contenedor general-->
   <div class="contenedor">
 
-
-
     <!--header-->
-    <header class="header">
+    <header class="header" id="header">
       <h2 class="header__titulo">¡Bienvenido al lugar de tu encuentro con Dios!</h2>
     </header>
 
     <!--Barra de navegacion-->
     <nav class="navbar">
 
-      <img loading="lazy" src="img/logo.jpg" class="navbar__logo" alt="">
+      <a href="#header">
+        <img loading="lazy" src="img/logo.jpg" class="navbar__logo" alt="">
+      </a>
 
       <ul class="navbar__item">
-        <li class="navbar__link navbar__link--activo">inicio</li>
-        <li class="navbar__link"><a href="#">nosotros</a></li>
-        <li class="navbar__link"><a href="#">actividades</a></li>
-        <li class="navbar__link"><a href="#">testimonios</a></li>
-        <li class="navbar__link"><a href="#">contacto</a></li>
+        <li class="navbar__link navbar__link--activo"> <a href="#main">inicio</a> </li>
+        <li class="navbar__link"><a href="#mision">mision</a></li>
+        <li class="navbar__link"><a href="#nosotros">nosotros</a></li>
+        <li class="navbar__link"><a href="#precursores">precursores</a></li>
+        <li class="navbar__link"><a href="#actividades">actividades</a></li>
+        <li class="navbar__link"><a href="#contacto">contacto</a></li>
 
 
         <p class="navbar__parrafo">
@@ -81,7 +82,7 @@
     </nav>
 
     <!--Main (Principal)-->
-    <main class="main">
+    <main class="main" id="main">
 
       <div class="main__text">
         <h3 class="main__tituloPre">Iglesia Cristiana</h3>
@@ -92,7 +93,7 @@
 
       <div class="main__btn">
         <a href="#rehma">
-          <input type="button" value="VER MÁS!">
+          <input type="button" value="VER MÁS">
         </a>
       </div>
 
@@ -155,11 +156,11 @@
 
     <!--Nosotros-->
 
-    <section class="nosotros">
+    <section class="nosotros" id="nosotros">
 
       <div class="nosotros__textoUno">
 
-        <h2 class="nosotros__titulo--uno">Mision</h2>
+        <h2 class="nosotros__titulo--uno">Nosotros</h2>
         <h4 class="nosotros__tituloSub--uno">Tristán Suárez</h4>
         <p class="nosotros__parrafo--uno">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
@@ -184,7 +185,7 @@
 
       <div class="nosotros__textoDos">
 
-        <h2 class="nosotros__titulo--dos">Vision</h2>
+        <h2 class="nosotros__titulo--dos">Nuestros Pastores</h2>
         <h4 class="nosotros__tituloSub--dos">Tristán Suárez</h4>
         <p class="nosotros__parrafo--dos">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
@@ -209,10 +210,10 @@
 
     <!--estructura de texto y foto-->
 
-    <section class="mision">
+    <section class="mision" id="mision">
       <div class="mision__texto">
         <h3 class="mision__tituloPre">Somos Iglesia!</h3>
-        <h2 class="mision__titulo">Nosotros</h2>
+        <h2 class="mision__titulo">Misión y visión</h2>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
         <p class="mision__parrafo">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
@@ -243,7 +244,7 @@
 
     <!--Precursores (Videos de Youtube)-->
 
-    <aside class="aside">
+    <aside class="aside" id="precursores">
       <div class="aside__texto">
         <h2 class="aside__titulo">Precursores</h2>
         <h3 class="aside__subtitulo">escuchalos!</h3>
@@ -268,7 +269,7 @@
 
     <!-- Actividades de la Iglesia-->
 
-    <section class="iglesia">
+    <section class="iglesia" id="actividades">
 
       <div class="iglesia__texto">
         <h3 class="iglesia__tituloPre">Somos Iglesia!</h3>
@@ -387,9 +388,9 @@
     </section>
 
 
-    <footer class="footer">
+    <footer class="footer" id="contacto">
 
-      <div class="footer__grupo1" id="contacto">
+      <div class="footer__grupo1">
 
         <!--COMUNIDAD-->
         <div class="footer__texto">
