--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
         </p>
       </div>
 
-      <div class="nosotros__imagenUno">
+      <div class="nosotros__imagenUno" data-aos="fade-left">
         <img loading="lazy" src="img/priscilla-du-preez-9CMUPez8wLo-unsplash.jpg" alt="">
       </div>
 
-      <div class="nosotros__imagenDos">
+      <div class="nosotros__imagenDos" data-aos="fade-right">
         <img loading="lazy" src="img/sincerely-media-dGxOgeXAXm8-unsplash.jpg" alt="">
       </div>
 
