portada main cambio

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       </a>
 
       <ul class="navbar__item">
-        <li class="navbar__link navbar__link--activo"> <a href="#main">inicio</a> </li>
-        <li class="navbar__link"><a href="#mision">mision</a></li>
+        <li class="navbar__link navbar__link--activo"> <a href="#header">iglesia</a> </li>
         <li class="navbar__link"><a href="#nosotros">nosotros</a></li>
+        <li class="navbar__link"><a href="#mision">mision</a></li>
         <li class="navbar__link"><a href="#precursores">precursores</a></li>
         <li class="navbar__link"><a href="#actividades">actividades</a></li>
         <li class="navbar__link"><a href="#contacto">contacto</a></li>
@@ -194,9 +194,7 @@
           placeat
 
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
-          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero magnam
-          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
-          placeat
+ 
         </p>
       </div>
 
@@ -377,7 +375,7 @@
     <!--Formulario-->
     <section class="form">
       <form action="https://formspree.io/f/mbjwgkgl" method="POST" class="form__contenedor" id="form">
-        <h2 class="form__titulo">CONTACTO</h2>
+        <h2 class="form__titulo">Contacto</h2>
         <input class="form__input" type="text" name="nombre" placeholder="Nombre" required>
         <input class="form__input" type="text" name="correo" placeholder="Correo" required>
         <input class="form__input" type="text" name="telefono" placeholder="Telefono" required>
