galeria de imagenes

--- a/index.html
+++ b/index.html
@@ -194,17 +194,11 @@
           placeat
 
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
- 
+
         </p>
       </div>
 
     </section>
-
-
-
-
-
-
 
     <!--estructura de texto y foto-->
 
@@ -364,12 +358,48 @@
         <a href="#iglesiaCardJovenes" class="popupBtn__close">X</a>
       </div>
 
-
-
-
-
-
     </div>
+
+    <section class="galeria">
+
+      <div class="galeria__titulo">
+        <h2>Galeria de imagenes</h2>
+      </div>
+
+      <div class="galeria__grid">
+        <figure class="galeria__picture galeria__picture--g1">
+          <img src="img/adolescentes.jpg" class="galeria__img">
+        </figure>
+
+        <figure class="galeria__picture galeria__picture--g2">
+          <img src="img/Alabanza.jpg" class="galeria__img">
+        </figure>
+
+        <figure class="galeria__picture galeria__picture--g3">
+          <img src="img/header.jpg" class="galeria__img">
+        </figure>
+
+        <figure class="galeria__picture galeria__picture--g4">
+          <img src="img/pastor corsi.jpg" class="galeria__img">
+        </figure>
+
+        <figure class="galeria__picture galeria__picture--g5">
+          <img src="img/main.jpg" class="galeria__img">
+        </figure>
+
+        <figure class="galeria__picture galeria__picture--g6">
+          <img src="img/matrimonios.jpg" class="galeria__img">
+        </figure>
+
+        <figure class="galeria__picture galeria__picture--g7">
+          <img src="img/adolescentes.jpg" class="galeria__img">
+        </figure>
+
+        <figure class="galeria__picture galeria__picture--g8">
+          <img src="img/priscilla-du-preez-9CMUPez8wLo-unsplash.jpg" class="galeria__img">
+        </figure>
+      </div>
+    </section>
 
 
     <!--Formulario-->
