--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Iglesia Cristiana "El Encuentro"- Tristán Suárez</title>
+  <title>Iglesia Cristiana 🙌 "El Encuentro"- Tristán Suárez</title>
   <link rel="icon" type="image/png" href="img/logotipo el encuentro.png">
 
   <!-- HTML -->
@@ -38,7 +38,7 @@
       <img src="img/Logo1.jpg" alt="">
     </div>
     <div class="loader__texto">
-      <span>EL ENCUENTRO - Tristán Suárez</span>
+      <span>EL ENCUENTRO - TRISTAN SUAREZ</span>
     </div>
   </div>
 
@@ -63,6 +63,7 @@
         <li class="navbar__link"><a href="#mision">mision</a></li>
         <li class="navbar__link"><a href="#precursores">precursores</a></li>
         <li class="navbar__link"><a href="#actividades">actividades</a></li>
+        <li class="navbar__link"><a href="#galeria">galeria</a></li>
         <li class="navbar__link"><a href="#contacto">contacto</a></li>
 
 
@@ -200,7 +201,7 @@
 
     </section>
 
-    <!--estructura de texto y foto-->
+    <!--Mision y Vision-->
 
     <section class="mision" id="mision">
       <div class="mision__texto">
@@ -269,9 +270,7 @@
         <h4 class="iglesia__tituloSub">Tristán Suárez</h4>
       </div>
 
-
       <div class="iglesia__contenedor">
-
 
         <!--Card niños-->
         <div class="iglesia__card" data-aos="zoom-in">
@@ -309,13 +308,11 @@
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
-
             <a href="#modal">
               <input type="button" class="iglesia__boton" value="VER MÁS!">
             </a>
           </div>
         </div>
-
 
         <!--Card matrimonios-->
         <div class="iglesia__card" data-aos="zoom-in">
@@ -329,6 +326,35 @@
             <input type="button" class="iglesia__boton" value="VER MÁS!">
           </div>
         </div>
+
+        
+        <!--Card Alabanza y adoracion-->
+        <div class="iglesia__card" data-aos="zoom-in">
+          <div class="iglesia__imagen iglesia__imagen--alabanza">
+          </div>
+          <div class="iglesia__cardTexto">
+            <h2 class="iglesia__cardTitulo">Alabanza</h2>
+            <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
+              servicio. </p>
+
+            <input type="button" class="iglesia__boton" value="VER MÁS!">
+          </div>
+        </div>
+
+        
+        <!--Card Evangelismo-->
+        <div class="iglesia__card" data-aos="zoom-in">
+          <div class="iglesia__imagen iglesia__imagen--evangelismo">
+          </div>
+          <div class="iglesia__cardTexto">
+            <h2 class="iglesia__cardTitulo">Evangelismo</h2>
+            <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
+              servicio. </p>
+
+            <input type="button" class="iglesia__boton" value="VER MÁS!">
+          </div>
+        </div>
+
       </div>
 
     </section>
@@ -360,7 +386,9 @@
 
     </div>
 
-    <section class="galeria">
+    <!--Galeria de imagenes-->
+
+    <section class="galeria" id="galeria">
 
       <div class="galeria__titulo">
         <h2>Galeria de imagenes</h2>
@@ -403,6 +431,7 @@
 
 
     <!--Formulario-->
+
     <section class="form">
       <form action="https://formspree.io/f/mbjwgkgl" method="POST" class="form__contenedor" id="form">
         <h2 class="form__titulo">Contacto</h2>
