--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     <main class="main" id="main">
 
       <div class="main__text">
+        <h3 class="main__tituloFondo">Iglesia Cristiana El Encuentro</h3>
         <h3 class="main__tituloPre">Iglesia Cristiana</h3>
         <div class="main__linea"></div>
         <h1 class="main__titulo">EL ENCUENTRO</h1>
@@ -404,7 +405,7 @@
         </figure>
 
         <figure class="galeria__picture galeria__picture--g3">
-          <img src="img/header.jpg" class="galeria__img">
+          <img src="img/Pastor2.jpg" class="galeria__img">
         </figure>
 
         <figure class="galeria__picture galeria__picture--g4">
