--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     <section class="galeria" id="galeria">
 
       <div class="galeria__titulo">
-        <h2>Galeria de imagenes</h2>
+        <h2>Galeria</h2>
       </div>
 
       <div class="galeria__grid">
@@ -409,7 +409,7 @@
         </figure>
 
         <figure class="galeria__picture galeria__picture--g4">
-          <img src="img/pastor corsi.jpg" class="galeria__img">
+          <img src="img/sincerely-media-dGxOgeXAXm8-unsplash.jpg" class="galeria__img">
         </figure>
 
         <figure class="galeria__picture galeria__picture--g5">
