--- a/index.html
+++ b/index.html
@@ -225,23 +225,17 @@
           voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
           consequatur.
 
-
-
         </p>
       </div>
 
     </section>
-
-
-
-
 
     <!--Precursores (Videos de Youtube)-->
 
     <aside class="aside" id="precursores">
       <div class="aside__texto">
         <h2 class="aside__titulo">Precursores</h2>
-        <h3 class="aside__subtitulo">escuchalos!</h3>
+        <h3 class="aside__subtitulo">escuchalos! 🎹 </h3>
       </div>
 
 
@@ -256,6 +250,19 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
+
+      <!-- Precursores Podcast -->
+
+      <div class="aside__texto2">
+        <h2 class="aside__titulo2">Predicas</h2>
+        <h3 class="aside__subtitulo2">escuchalos! 🎧 </h3>
+      </div>
+
+      <div class="aside__iframe aside__iframe--podcast">    
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3L4fED4Rw4dME2VlrbkYr6?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+      </div> 
+
     </aside>
 
 
