ver mas! youtube

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <img src="img/Logo1.jpg" alt="">
     </div>
     <div class="loader__texto">
-      <span>EL ENCUENTRO</span>
+      <span>EL ENCUENTRO - Tristán Suárez</span>
     </div>
   </div>
 
@@ -254,7 +254,7 @@
       <!-- Precursores Podcast -->
 
       <div class="aside__texto2">
-        <h2 class="aside__titulo2">Predicas</h2>
+        <h2 class="aside__titulo2">Podcast</h2>
         <h3 class="aside__subtitulo2">escuchalos! 🎧 </h3>
       </div>
 
@@ -262,6 +262,17 @@
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3L4fED4Rw4dME2VlrbkYr6?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
       </div> 
+
+      <div class="aside__texto3">
+        <h2 class="aside__titulo3">Ultimas reuniones</h2>
+        <h3 class="aside__subtitulo3">miralas! 👇 </h3>
+      </div>
+
+      <div class="aside__btn">
+        <a href="reuniones.html">
+          <input type="button" value="VER MÁS">
+        </a>
+      </div>
 
     </aside>
 
@@ -398,9 +409,11 @@
 
     <section class="galeria" id="galeria">
 
-      <div class="galeria__titulo">
-        <h2>Galeria</h2>
+      <div class="galeria__texto">
+        <h2 class="galeria__titulo">Galeria</h2>
+        <h3 class="galeria__subtitulo">imagenes! 😎 </h3>
       </div>
+     
 
       <div class="galeria__grid">
         <figure class="galeria__picture galeria__picture--g1">
