--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <img src="img/Logo1.jpg" alt="">
     </div>
     <div class="loader__texto">
-      <span>EL ENCUENTRO - Tristán Suárez</span>
+      <span>El Encuentro - Tristán Suárez</span>
     </div>
   </div>
 
