--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
     <section class="mision" id="mision">
       <div class="mision__texto">
-        <h3 class="mision__tituloPre">Somos Iglesia!</h3>
+        <h3 class="mision__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
         <h2 class="mision__titulo">Misión y visión</h2>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
         <p class="mision__parrafo">
@@ -284,7 +284,7 @@
     <section class="iglesia" id="actividades">
 
       <div class="iglesia__texto">
-        <h3 class="iglesia__tituloPre">Somos Iglesia!</h3>
+        <h3 class="iglesia__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
         <h2 class="iglesia__titulo">Actividades</h2>
         <h4 class="iglesia__tituloSub">Tristán Suárez</h4>
       </div>
@@ -455,7 +455,7 @@
 
     <section class="form">
       <form action="https://formspree.io/f/mbjwgkgl" method="POST" class="form__contenedor" id="form">
-        <h2 class="form__titulo">Contacto</h2>
+        <h2 class="form__titulo">Contacto 📧 </h2>
         <input class="form__input" type="text" name="nombre" placeholder="Nombre" required>
         <input class="form__input" type="text" name="correo" placeholder="Correo" required>
         <input class="form__input" type="text" name="telefono" placeholder="Telefono" required>
