--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
       <div class="aside__iframe aside__iframe--podcast">    
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3L4fED4Rw4dME2VlrbkYr6?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5D7HMxS7az7Ewc5COXtylC?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       </div> 
 
       <div class="aside__texto3">
@@ -476,21 +477,21 @@
           <!--ubicacion-->
           <ul>
             <li class="footer__ubicacion">
-              <i class="fas fa-map-marker-alt"></i>
+              <!-- <i class="fas fa-map-marker-alt"></i> -->
               <p class="footer__parrafo"> Natta 362, Tristán Suárez, Prov. Bs. As./ Argentina</p>
             </li>
           </ul>
           <!--email-->
           <ul>
             <li class="footer__correo">
-              <i class="far fa-envelope"></i>
+              <!-- <i class="far fa-envelope"></i> -->
               <p class="footer__parrafo">javier@iglesiaelencuentro.org.ar</p>
             </li>
           </ul>
           <!--Reuniones-->
           <ul>
             <li class="footer__reuniones">
-              <i class="fas fa-cross"></i>
+              <!-- <i class="fas fa-cross"></i> -->
               <p class="footer__parrafo"><strong>Cultos centrales:</strong>
                 Miercoles 19:00hs y Domingos 10:30hs
                 <strong>Consultorio Pastoral:</strong>
