--- a/reuniones.html
+++ b/reuniones.html
@@ -42,6 +42,13 @@
                 <img loading="lazy" src="img/logo.jpg" class="navbar__logo" alt="">
             </a>
 
+            <div class="aside__social">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://instagram.com/elencuentrosuarez?utm_medium=copy_link" target="_blank"><i
+                    class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube "></i></a>
+              </div>
+
             <ul class="navbar__item">
                 <li class="navbar__link navbar__link--activo"> <a href="index.html">volver</a> </li>
 
@@ -95,6 +102,8 @@
 
 
             </div>
+
+          
         
 
 
