Nosotros pantalla dividida

--- a/index.html
+++ b/index.html
@@ -156,46 +156,73 @@
     </article>
 
 
-    <!--Nosotros-->
+    <!-- Nosotros-->
+    <!-- Pantalla dividida izquierda -->
 
-    <section class="nosotros" id="nosotros">
+    <section class="dividida__left" id="dividida">
+      <!-- izquierda -->
 
-      <div class="nosotros__textoUno">
+      <div class="left__textoDos" data-aos="fade-left">
 
-        <h2 class="nosotros__titulo--uno">Nosotros</h2>
-        <h4 class="nosotros__tituloSub--uno">Tristán Suárez</h4>
-        <p class="nosotros__parrafo--uno">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
-          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero magnam
+        <h2 class="left__titulo--dos">Nuestros Pastores</h2>
+        <h4 class="left__tituloSub--dos">Tristán Suárez</h4>
+        <p class="left__parrafo--dos">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
+          odio
+          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero
+          magnam
           velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
           placeat
 
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
-          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero magnam
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
+          odio
+
           velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
           placeat
+
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
+          odio
+
         </p>
       </div>
 
-      <div class="nosotros__imagenUno" data-aos="fade-left">
-        <img loading="lazy" src="img/priscilla-du-preez-9CMUPez8wLo-unsplash.jpg" alt="">
+
+      <!-- derecha -->
+      <div class="left__imagen--right">
       </div>
 
-      <div class="nosotros__imagenDos" data-aos="fade-right">
-        <img loading="lazy" src="img/sincerely-media-dGxOgeXAXm8-unsplash.jpg" alt="">
+    </section>
+
+
+    <!-- Pantalla dividida derecha -->
+
+    <section class="dividida__right" id="dividida">
+      <!-- izquierda -->
+
+      <!-- derecha -->
+      <div class="right__imagen--left">
       </div>
 
-      <div class="nosotros__textoDos">
+      <div class="right__textoDos" data-aos="fade-right">
 
-        <h2 class="nosotros__titulo--dos">Nuestros Pastores</h2>
-        <h4 class="nosotros__tituloSub--dos">Tristán Suárez</h4>
-        <p class="nosotros__parrafo--dos">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
-          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero magnam
+        <h2 class="right__titulo--dos">Nuestros Pastores</h2>
+        <h4 class="right__tituloSub--dos">Tristán Suárez</h4>
+        <p class="right__parrafo--dos">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
+          odio
+          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero
+          magnam
           velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
           placeat
 
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
+          odio
+
+          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
+          placeat
+
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
+          odio
 
         </p>
       </div>
@@ -258,11 +285,17 @@
         <h3 class="aside__subtitulo2">escuchalos! 🎧 </h3>
       </div>
 
-      <div class="aside__iframe aside__iframe--podcast">    
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3L4fED4Rw4dME2VlrbkYr6?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      <div class="aside__iframe aside__iframe--podcast">
+        <iframe style="border-radius:12px"
+          src="https://open.spotify.com/embed/track/3L4fED4Rw4dME2VlrbkYr6?utm_source=generator" width="100%"
+          height="380" frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5D7HMxS7az7Ewc5COXtylC?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-      </div> 
+        <iframe style="border-radius:12px"
+          src="https://open.spotify.com/embed/track/5D7HMxS7az7Ewc5COXtylC?utm_source=generator" width="100%"
+          height="380" frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      </div>
 
       <div class="aside__texto3">
         <h2 class="aside__titulo3">Ultimas reuniones</h2>
@@ -414,7 +447,7 @@
         <h2 class="galeria__titulo">Galeria</h2>
         <h3 class="galeria__subtitulo">imagenes! 😎 </h3>
       </div>
-     
+
 
       <div class="galeria__grid">
         <figure class="galeria__picture galeria__picture--g1">
