--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <div class="left__textoDos" data-aos="fade-left">
 
         <h2 class="left__titulo--dos">Nosotros</h2>
-        <h4 class="left__tituloSub--dos">Tristán Suárez</h4>
+        <h4 class="left__tituloSub--dos">Tristán Suárez  ✋🤚</h4>
         <p class="left__parrafo--dos">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
           odio
@@ -206,7 +206,7 @@
       <div class="right__textoDos" data-aos="fade-right">
 
         <h2 class="right__titulo--dos">Nuestros Pastores</h2>
-        <h4 class="right__tituloSub--dos">Tristán Suárez</h4>
+        <h4 class="right__tituloSub--dos">Tristán Suárez 👫</h4>
         <p class="right__parrafo--dos">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
           odio
