--- a/index.html
+++ b/index.html
@@ -58,20 +58,13 @@
       </a>
 
       <ul class="navbar__item">
-        <li class="navbar__link navbar__link--activo"> <a href="#header">iglesia</a> </li>
-        <li class="navbar__link"><a href="#nosotros">nosotros</a></li>
+        <li class="navbar__link navbar__link--activo"> <a href="#header">inicio</a> </li>
+        <li class="navbar__link"><a href="#dividida">nosotros</a></li>
         <li class="navbar__link"><a href="#mision">mision</a></li>
-        <li class="navbar__link"><a href="#precursores">precursores</a></li>
+        <li class="navbar__link"><a href="#multimedia">multimedia</a></li>
         <li class="navbar__link"><a href="#actividades">actividades</a></li>
         <li class="navbar__link"><a href="#galeria">galeria</a></li>
         <li class="navbar__link"><a href="#contacto">contacto</a></li>
-
-
-        <p class="navbar__parrafo">
-          »Porque tanto amó Dios al mundo que dio a su Hijo unigénito, para que todo el que cree en él no se pierda,
-          sino que tenga vida eterna. <br>
-          Juan 3:16- NVI
-        </p>
 
       </ul>
 
@@ -158,14 +151,13 @@
 
     <!-- Nosotros-->
     <!-- Pantalla dividida izquierda -->
-
     <section class="dividida__left" id="dividida">
       <!-- izquierda -->
 
       <div class="left__textoDos" data-aos="fade-left">
 
         <h2 class="left__titulo--dos">Nosotros</h2>
-        <h4 class="left__tituloSub--dos">Tristán Suárez  ✋🤚</h4>
+        <h4 class="left__tituloSub--dos">Tristán Suárez ✋🤚</h4>
         <p class="left__parrafo--dos">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
           odio
@@ -187,20 +179,21 @@
       </div>
 
 
-      <!-- derecha -->
+      <!-- contenedor izquierda nosotros -->
       <div class="left__imagen--right">
+        <p class="left__frase">¡Bienvenido al lugar de tu encuentro con Dios, gracias por acompañarnos!</p>
       </div>
 
     </section>
 
 
     <!-- Pantalla dividida derecha -->
-
     <section class="dividida__right" id="dividida">
-      <!-- izquierda -->
-
       <!-- derecha -->
+     
+      <!-- contenedor derecha nuestros pastores -->
       <div class="right__imagen--left">
+        <p class="right__frase">Pr. Javier Corsi | "Me rindo a su voluntad para ganar"</p>
       </div>
 
       <div class="right__textoDos" data-aos="fade-right">
@@ -259,7 +252,7 @@
 
     <!--Precursores (Videos de Youtube)-->
 
-    <aside class="aside" id="precursores">
+    <aside class="aside" id="multimedia">
       <div class="aside__texto">
         <h2 class="aside__titulo">Precursores</h2>
         <h3 class="aside__subtitulo">escuchalos! 🎹 </h3>
@@ -287,14 +280,16 @@
 
       <div class="aside__iframe aside__iframe--podcast">
         <iframe style="border-radius:12px"
-          src="https://open.spotify.com/embed/track/3L4fED4Rw4dME2VlrbkYr6?utm_source=generator" width="100%"
-          height="380" frameBorder="0" allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+          src="https://open.spotify.com/embed/track/7bcC6wus84h6Vmy2REacVA?utm_source=generator" width="80%" height="80"
+          frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+        </iframe>
 
         <iframe style="border-radius:12px"
-          src="https://open.spotify.com/embed/track/5D7HMxS7az7Ewc5COXtylC?utm_source=generator" width="100%"
-          height="380" frameBorder="0" allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+          src="https://open.spotify.com/embed/track/1Zy7K92fCt1CPKkJbtlMZp?utm_source=generator" width="80%" height="80"
+          frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+        </iframe>
       </div>
 
       <div class="aside__texto3">
