--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <div class="loader__imagen">
       <img src="img/Logo1.jpg" alt="">
     </div>
-    <div class="loader__texto">
+    <!-- <div class="loader__texto">
       <span>El Encuentro - Tristán Suárez</span>
-    </div>
+    </div> -->
   </div>
 
   <!--contenedor general-->
