--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <h4 class="main__tituloSub">Tristán Suárez</h4>
       </div>
 
+
       <div class="main__btn">
         <a href="#rehma">
           <input type="button" value="VER MÁS">
@@ -248,6 +249,21 @@
           consequatur.
 
         </p>
+      </div>
+
+      <!-- carrousel -->
+      <div class="mision__carrousel">
+
+        <div class="mision__grande">
+          <img src="img/javier.jpg" alt="imagen1" class="grande--img">
+          <img src="img/Alabanza.jpg" alt="imagen2" class="grande--img">
+        </div>
+
+        <ul class="mision__carrousel--puntos">
+          <li class="btn-punto"></li>
+          <li class="btn-punto"></li>
+        </ul>
+
       </div>
 
     </section>
