--- a/index.html
+++ b/index.html
@@ -250,13 +250,26 @@
 
         </p>
       </div>
+    </section>
 
-      <!-- carrousel -->
-      <div class="mision__carrousel">
+    <section class="banner">
+      <div class="banner__grande">
+        <img src="img/banner-tienda-online.png" alt="imagen1" class="banner--img">
+        <img src="img/betania.png" alt="imagen2" class="banner--img">
+      </div>
+
+      <ul class="banner__carrousel--puntos">
+        <li class="banner__punto"></li>
+        <li class="banner__punto"></li>
+      </ul>
+    </section>
+
+    <!-- carrousel -->
+    <!-- <div class="mision__carrousel">
 
         <div class="mision__grande">
-          <img src="img/javier.jpg" alt="imagen1" class="grande--img">
-          <img src="img/Alabanza.jpg" alt="imagen2" class="grande--img">
+          <img src="img/main.png" alt="imagen1" class="grande--img">
+          <img src="img/alabanza3.jpg" alt="imagen2" class="grande--img">
         </div>
 
         <ul class="mision__carrousel--puntos">
@@ -266,7 +279,7 @@
 
       </div>
 
-    </section>
+    </section> -->
 
     <!--Precursores (Videos de Youtube)-->
 
@@ -433,8 +446,10 @@
         <div class="popup__img"></div>
         <div class="popup__text">
           <h2>Ministerio Jovenes</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni ratione quidem sequi dolores, mollitia sed
-            nihil vitae atque blanditiis dolore vero voluptatum placeat tempore aliquam veniam vel deleniti praesentium
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni ratione quidem sequi dolores, mollitia
+            sed
+            nihil vitae atque blanditiis dolore vero voluptatum placeat tempore aliquam veniam vel deleniti
+            praesentium
             quia maiores reiciendis. Culpa maxime minus, tempore architecto, autem eligendi quia accusamus ipsa,
             similique itaque eos quos!
           </p>
