--- a/index.html
+++ b/index.html
@@ -323,17 +323,24 @@
         </iframe>
       </div>
 
-      <div class="aside__texto3">
-        <h2 class="aside__titulo3">Ultimas reuniones</h2>
-        <h3 class="aside__subtitulo3">miralas! 👇 </h3>
-      </div>
+      <div class="aside__reuniones">
+        <div class="aside__texto3">
+          <h2 class="aside__titulo3">Ultimas reuniones</h2>
+          <h3 class="aside__subtitulo3">miralas! 👇 </h3>
+        </div>
 
-      <div class="aside__btn">
-        <a href="reuniones.html">
-          <input type="button" value="VER MÁS">
-        </a>
-      </div>
+        <div class="aside__btn">
+          <a href="reuniones.html">
+            <input type="button" value="VER MÁS">
+          </a>
+        </div>
 
+        <div class="aside__imagen">
+          <img src="img/277301390_5064857213583975_763771797792303916_n.jpg" alt="imagen reunion" class="aside--img">
+          <img src="img/277719901_5064857200250643_4054100734702023779_n.jpg" alt="imagen reunion" class="aside--img">
+        </div>
+        
+      </div>
     </aside>
 
 
