--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
           <img src="img/277301390_5064857213583975_763771797792303916_n.jpg" alt="imagen reunion" class="aside--img">
           <img src="img/277719901_5064857200250643_4054100734702023779_n.jpg" alt="imagen reunion" class="aside--img">
         </div>
-        
+
       </div>
     </aside>
 
@@ -531,6 +531,14 @@
         <textarea class="form__textarea" name="mensaje" placeholder="Escriba aqui su mensaje" required></textarea>
         <input class="form__button" type="submit" value="ENVIAR" id="boton">
       </form>
+
+      <section class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6544.829121977961!2d-58.57231244996859!3d-34.89604461706162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd9c48dc0a621%3A0x5c257f2545c6b7fb!2sIglesia%20Evang%C3%A9lica%20El%20Encuentro!5e0!3m2!1ses-419!2sar!4v1651186701116!5m2!1ses-419!2sar"
+          width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+      </section>
 
     </section>
 
